# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  repository.py  utils.py
page_analyzer/templates/: 404.html  index.html  layout.html  layout_url.html  layout_urls.html  navbar.html  show.html  url.html  urls.html
tests/: __init__.py  test_app.py
