[project]
authors = [
    {name = "Alina Makarovskaya", email = "makarovskaya1307@gmail.com"},
]
requires-python = "<4.0,>=3.12"
name = "hexlet-code"
version = "0.1.0"
description = "Project #3 - Page Analyzer"
readme = "README.md"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]